--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Registration</title>
+
+    <!--Bootstrap inclusions-->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'register/register.css' %}">
+    <script src="{% static 'register/register.js' %}"></script>
+    <!--<script src="js/about.js"></script>-->
+    <link rel="stylesheet" href="{% static 'events/bootstrap.min.css' %}" />
+    <script src="{% static 'events/bootstrap.min.js' %}"></script>
+
+
 </head>
+
 <body>
-$END$
+    <div id="googleMap">
+
+    </div>
+    <div class="details-over-map">
+        <div class="details-text">
+            <span class="details-title">Hapenning Here</span>
+        </div>
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+    <div class="registration-headings">
+        <span class="registration-heading">Register Here</span><br>
+        <span class="registration-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, in!</span>
+    </div>
+    <div class="registration-form">
+        <form>
+            <div class="form-group">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+            </div>
+
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+    </div>
+
+    <!-- Left Bar -->
+    <section class="section-leftbar">
+        <div class="leftbar">
+
+        </div>
+    </section>
+
 </body>
+
 </html>
